header + section reservation + section fonctionnement

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,16 @@
-@import "./utils/variables"
+// Utils
+@import "./utils/variables";
+@import"./utils/function";
+@import "./utils/mixin";
+// Tiers
+
+// Base
+@import"./base/base";
+@import "./base/typography";
+// Conponents
+@import"./components/button";
+// Layout
+@import "./layout/header";
+// Pages
+@import "./pages/index";
+// Thèmes
