--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,147 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+body {
+  margin: 0;
+}
+
+header {
+  margin: 0 auto;
+  max-width: 1536px;
+  display: flex;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
+}
+
+main {
+  margin: 0 auto;
+  max-width: 1536px;
+}
+
+h1, h2, h3, p {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+h1 {
+  font-size: 26px;
+}
+
+p {
+  font-size: 20px;
+}
+
+input::placeholder {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  color: #353535;
+}
+
+.btn {
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+  font-size: 18px;
+}
+
+.btn {
+  margin: 0;
+  padding: 20px;
+  background: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 30px;
+  height: 50px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
+}
+.btn:hover {
+  background: linear-gradient(0deg, #965add 0%, #ff7edb 50%);
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3), 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
+}
+
+.header__container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 25px 0 10px 0;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
+}
+.header__container img {
+  width: 180px;
+  margin: 0 auto;
+}
+
+#reservation__ville {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #EAEAEA;
+  height: 60px;
+  gap: 20px;
+}
+#reservation__ville i {
+  color: #353535;
+}
+#reservation__ville input {
+  display: flex;
+  border: none;
+  background-color: inherit;
+}
+
+.reservation__exploration {
+  background-color: #F6F6F6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 40px 0;
+  gap: 10px;
+}
+.reservation__exploration h1 {
+  text-align: center;
+  display: flex;
+  max-width: 60%;
+}
+.reservation__exploration p {
+  text-align: center;
+  display: flex;
+  max-width: 85%;
+  margin-bottom: 20px;
+}
+
+.fonctionnement__container {
+  margin: 0 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.fonctionnement__container .fonctionnement__regles {
+  display: flex;
+  align-items: center;
+  background-color: #F6F6F6;
+  color: #353535;
+  height: 80px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
+  gap: 15px;
+  border-radius: 20px;
+  width: 100%;
+}
+.fonctionnement__container .fonctionnement__regles span {
+  display: flex;
+  margin-left: -10px;
+  align-items: center;
+  justify-content: center;
+  width: 25px;
+  height: 25px;
+  background-color: #9356DC;
+  color: #fff;
+  border-radius: 50px;
+}
+.fonctionnement__container .fonctionnement__regles:hover {
+  background-color: #f2eafb;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
+}
+.fonctionnement__container .fonctionnement__regles:hover i {
+  color: #9356DC;
+}
+
+/*# sourceMappingURL=style.css.map */
