--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,7 +7,7 @@ $color-footer: #353535;
 $color-primary-light: lighten($color-primary, 1%);
 $color-secondary-light: lighten($color-secondary, 1%);
 
-$margin: 0 15px; 
+$margin: 50px 15px; 
 
 $color-btn: linear-gradient(0deg, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 100%);
 
