--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,7 +93,7 @@ input::placeholder {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 40px 0;
+  padding: 50px 0;
   gap: 10px;
 }
 .reservation__exploration h1 {
@@ -109,7 +109,7 @@ input::placeholder {
 }
 
 .fonctionnement__container {
-  margin: 0 15px;
+  margin: 50px 15px;
   display: flex;
   flex-direction: column;
   gap: 20px;
