--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap');
 
 h1, h2, h3, p{
   margin: 0;
@@ -9,6 +9,7 @@ h1{
 }
 p{
   font-size: 20px;
+  font-weight: 300;
 }
 input::placeholder{
   font-family: 'Roboto', sans-serif;
