--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -22,3 +22,8 @@ input::placeholder{
   color: #fff;
   font-size: 18px;
 }
+.nouveau{
+  color: $color-nouveau;
+  font-weight: 700;
+  font-size: 16px;
+}
