--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,8 +9,10 @@
 @import "./base/typography";
 // Conponents
 @import"./components/button";
+@import "./components/heart";
 // Layout
 @import "./layout/header";
+@import "./layout/footer";
 // Pages
 @import "./pages/index";
 // Thèmes
