--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -6,6 +6,7 @@ $color-font:#F6F6F6;
 $color-footer: #353535;
 $color-primary-light: rgba($color-primary, .8);
 $color-secondary-light: rgba($color-secondary, .8);
+$color-nouveau: #008766;
 
 $margin: 50px 15px; 
 
