--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -71,10 +71,23 @@
     gap: 20px;
   }
   .restaurent__card{
-    display:flex;
-    flex-direction: column;
     border-radius: 15px;
     box-shadow: $shadow;
+    a{
+      text-decoration: none;
+      color: #000;
+      display:flex;
+      flex-direction: column;
+    }
+    .nouveau{
+      border-radius: 2px;
+      @include nouveau($color-nouveau);
+      display: flex;
+      @include align-justify-center;
+      width: 100px;
+      height: 30px;
+      position: absolute;
+    }
     img{
       display: flex;
       object-fit: cover;
@@ -93,4 +106,5 @@
       flex-direction: column;
     }
   }
+
 }
