--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,9 +10,11 @@
 // Conponents
 @import"./components/button";
 @import "./components/heart";
+@import"./components/imagemenu";
 // Layout
 @import "./layout/header";
 @import "./layout/footer";
+@import "./layout/menu";
 // Pages
 @import "./pages/index";
 // Thèmes
