--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,13 +1,13 @@
 .btn{
-  margin: 0;
-  padding: 20px;
+  margin: 0 auto;
+  padding: 15px 20px;
   background: $color-btn;
   display: flex;
   @include align-justify-center;
   border: none;
   border-radius: 30px;
-  height: 50px;
   box-shadow: $shadow;
+  min-width:200px;
   &:hover{
     @include btn--hover();
     cursor: pointer;
