--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -12,6 +12,7 @@ h1{
     font-family: 'Shrikhand', cursive;
     font-weight: 400;
     font-size: 30px;
+    max-width: 80%;
   }
   h3{
     display: flex;
@@ -24,9 +25,17 @@ h1{
   }
   h4{
     font-size: 20px;
+    max-width: 90%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   p{
     font-size: 16px;
+    max-width: 85%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   b{
     color:$color-footer;
