--- a/sass/components/_heart.scss
+++ b/sass/components/_heart.scss
@@ -1,8 +1,12 @@
 .heart{
+  position: relative;
   .fas{
     color: $color-primary;
     opacity: 0;
     transition: all 400ms linear;
+    position: absolute;
+    top:-15px;
+    right: 10px;
     &:hover{
       cursor: pointer;
       opacity: 1;
@@ -11,6 +15,9 @@
   .far{
     opacity: 1;
     transition: all 400ms linear;
+    position: absolute;
+    top:-15px;
+    right: 10px;
     &:hover{
       cursor: pointer;
       opacity: 0;
