--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import"./components/button";
 @import "./components/heart";
 @import"./components/imagemenu";
+@import"./components/check";
 // Layout
 @import "./layout/header";
 @import "./layout/footer";
