--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -33,6 +33,7 @@
   }
 }
 .fonctionnement__container{
+  max-width: 1536px;
   margin: $margin;
   display: flex;
   flex-direction: column;
@@ -78,6 +79,7 @@
       color: #000;
       display:flex;
       flex-direction: column;
+      position:relative;
     }
     .nouveau{
       border-radius: 2px;
@@ -87,6 +89,8 @@
       width: 100px;
       height: 30px;
       position: absolute;
+      top:10px;
+      right: 10px;
     }
     img{
       display: flex;
