--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,16 +1,21 @@
-$color-primary:#9356DC ;
-$color-secondary:#FF79DA;
-$color-tertiary:#99E2D0;
-$color-ville: #EAEAEA;
-$color-font:#F6F6F6;
+$color-primary: #9356dc;
+$color-secondary: #ff79da;
+$color-tertiary: #99e2d0;
+$color-ville: #eaeaea;
+$color-font: #f6f6f6;
 $color-footer: #353535;
-$color-primary-light: rgba($color-primary, .8);
-$color-secondary-light: rgba($color-secondary, .8);
+$color-primary-light: rgba($color-primary, 0.8);
+$color-secondary-light: rgba($color-secondary, 0.8);
 $color-nouveau: #008766;
 
-$margin: 50px 15px; 
+$margin: 50px 15px;
 
-$color-btn: linear-gradient(0deg, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 100%);
+$color-btn: linear-gradient(
+  0deg,
+  rgba(147, 86, 220, 1) 0%,
+  rgba(255, 121, 218, 1) 100%
+);
 
+$shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
 
-$shadow: 0px 5px 10px 0px rgba(0,0,0,0.3);
+$query: 992px;
