--- a/sass/components/_heart.scss
+++ b/sass/components/_heart.scss
@@ -1,26 +1,29 @@
-.heart{
+.heart {
   position: relative;
-  .fas{
+  .fas {
     color: $color-primary;
     opacity: 0;
     transition: all 400ms linear;
     position: absolute;
-    top:-15px;
+    top: -50px;
     right: 10px;
-    &:hover{
+    &:hover {
       cursor: pointer;
       opacity: 1;
     }
   }
-  .far{
+  .far {
     opacity: 1;
     transition: all 400ms linear;
     position: absolute;
-    top:-15px;
+    top: -50px;
     right: 10px;
-    &:hover{
+    &:hover {
       cursor: pointer;
       opacity: 0;
     }
+  }
+  .heart--menu{
+  top:-15px;
   }
 }
