--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,15 +3,14 @@ footer {
   .footer__container {
     max-width: 1536px;
     margin: 0 auto;
-    padding: $margin;
-    padding-top: 20px;
+    padding: 20px 30px;
     display: flex;
     flex-direction: column;
     gap: 10px;
   }
   img {
     filter: invert(100%);
-    width: 100px;
+    width: 130px;
     margin-bottom: 10px;
   }
   .footer__info {
