--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./base/base";
 @import "./base/typography";
 // Conponents
+@import"./components/loader";
 @import "./components/button";
 @import "./components/heart";
 @import "./components/imagemenu";
