--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,11 +90,110 @@ input::placeholder {
   font-size: 16px;
 }
 
+.loader__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  z-index: 1;
+  animation: 3s 0.1s disparition linear both;
+}
+.loader__container h1 {
+  font-family: "Shrikhand", cursive;
+  font-size: 40px;
+  color: #000;
+  animation: title__loader 2s infinite;
+  margin-bottom: 10px;
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  width: 100%;
+}
+
+.load__point {
+  width: 30px;
+  height: 60px;
+  border-radius: 20px;
+}
+
+.point--1 {
+  background-color: #9356DC;
+  animation: loader 1s 0ms infinite;
+}
+
+.point--2 {
+  background-color: #FF79DA;
+  animation: loader 1s 100ms infinite;
+}
+
+.point--3 {
+  background-color: #FFC5DA;
+  animation: loader 1s 200ms infinite;
+}
+
+.point--4 {
+  background-color: #99E2D0;
+  animation: loader 1s 300ms infinite;
+}
+
+.point--5 {
+  background-color: #99E291;
+  animation: loader 1s 400ms infinite;
+}
+
+@keyframes loader {
+  0% {
+    opacity: 1;
+    transform: scale(0.5);
+  }
+  50% {
+    opacity: 0.3;
+    transform: scale(1.5);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(0.5);
+  }
+}
+@keyframes title__loader {
+  0% {
+    opacity: 0.3;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.3;
+  }
+}
+@keyframes disparition {
+  0% {
+    opacity: 1;
+    transform: translate(0);
+  }
+  80% {
+    opacity: 1;
+    transform: translate(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translate(0, -200%);
+  }
+}
 .btn {
   margin: 0 auto;
   padding: 15px 20px;
   background: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
   display: flex;
+  animation: apparition 0.6s 1.6s linear both;
   align-items: center;
   justify-content: center;
   border: none;
@@ -212,6 +311,16 @@ footer a {
   align-items: center;
 }
 
+@keyframes apparition {
+  0% {
+    opacity: 0;
+    transform: translate(0, 10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
 .menu__container {
   background-color: #f6f6f6;
   border-radius: 40px 40px 0 0;
@@ -236,6 +345,7 @@ footer a {
   display: flex;
   flex-direction: column;
   gap: 15px;
+  animation: apparition 1s 0.2s linear both;
 }
 .menu__container .menu__carte:hover {
   cursor: pointer;
@@ -248,6 +358,19 @@ footer a {
   border-radius: 10px;
   height: 65px;
   overflow: hidden;
+  animation: apparition 0.6s 0.2s linear both;
+}
+.menu__container .menu__plat--1 {
+  animation-delay: 0.4s;
+}
+.menu__container .menu__plat--2 {
+  animation-delay: 0.8s;
+}
+.menu__container .menu__plat--3 {
+  animation-delay: 1.2s;
+}
+.menu__container .menu__plat--4 {
+  animation-delay: 1.6s;
 }
 .menu__container .menu {
   width: 100%;
@@ -278,6 +401,15 @@ footer a {
   }
   .menu__container .menu__carte h3 {
     margin: 0 auto;
+  }
+  .menu__container .menu__carte--entrees {
+    animation-delay: 0.2s;
+  }
+  .menu__container .menu__carte--plats {
+    animation-delay: 0.2s;
+  }
+  .menu__container .menu__carte--desserts {
+    animation-delay: 0.2s;
   }
 }
 #reservation__ville {
