--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -1,3 +1,13 @@
+@keyframes apparition{
+  0%{
+    opacity: 0;
+    transform: translate(0,10px);
+  }
+  100%{
+    opacity: 1;
+    transform: translate(0);
+  }
+}
 .menu__container {
   background-color: $color-font;
   border-radius: 40px 40px 0 0;
@@ -21,9 +31,11 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    animation: apparition 1s .2s linear both;
     &:hover{
       cursor: pointer;
     }
+
   }
   .menu__plat {
     display: flex;
@@ -33,6 +45,19 @@
     border-radius: 10px;
     height: 65px;
     overflow: hidden;
+    animation: apparition .6s .2s linear both;
+    &--1{
+      animation-delay: $timming-1;
+    }
+    &--2{
+      animation-delay: $timming-2;
+    }
+    &--3{
+      animation-delay: $timming-3;
+    }
+    &--4{
+      animation-delay: $timming-4;
+    }
   }
   .menu{
     width: 100%;
@@ -61,6 +86,15 @@
     width: 30%;
       h3{
         margin:0 auto;
+      }
+      &--entrees{
+        animation-delay: .2s;
+      }
+      &--plats{
+        animation-delay: .2s;
+      }
+      &--desserts{
+        animation-delay: .2s;
       }
     }
   }
