--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -19,3 +19,12 @@ $color-btn: linear-gradient(
 $shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
 
 $query: 992px;
+
+$timming-1: .4s;
+$timming-2: $timming-1*2;
+$timming-3: $timming-1*3;
+$timming-4: $timming-1*4;
+
+$timming-entrees: .2s;
+$timming-plats: $timming-entrees*2;
+$timming-desserts: $timming-entrees*3;
