--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,7 +95,7 @@ input::placeholder {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-color: #fff;
