--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -85,6 +85,10 @@
     opacity: 1;
     transform: translate(0);
   }
+  99%{
+    opacity: 0;
+    transform: translate(0);
+  }
   100%{
     opacity: 0;
     transform: translate(0, -200%);
