--- a/sass/components/_heart.scss
+++ b/sass/components/_heart.scss
@@ -1,31 +1,5 @@
 .heart {
   position: relative;
-  .fas {
-    color: $color-primary;
-    opacity: 0;
-    transition: all 400ms linear;
-    position: absolute;
-    top: -50px;
-    right: 10px;
-    &:hover {
-      cursor: pointer;
-      opacity: 1;
-    }
-  }
-  .far {
-    opacity: 1;
-    transition: all 400ms linear;
-    position: absolute;
-    top: -50px;
-    right: 10px;
-    &:hover {
-      cursor: pointer;
-      opacity: 0;
-    }
-  }
-  .heart--menu{
-  top:-15px;
-  }
   svg{
   position: absolute;
   top: -50px;
@@ -40,6 +14,10 @@
     &:hover {
       cursor: pointer;
     }
+    &:hover + .test2{
+    cursor: pointer;
+    animation: remplir 1s linear both;
+    }
   }
   .test2 {
     fill: url(#lgrad);
@@ -51,12 +29,10 @@
       cursor: pointer;
       animation: remplir 1s linear both;
     }
-
   }
-  .test1:hover + .test2{
-      cursor: pointer;
-      animation: remplir 1s linear both;
-    }
+  .heart--menu{
+  top:-15px;
+  }
 }
 @keyframes remplir{
   0%{
