--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -1,13 +1,3 @@
-@keyframes apparition{
-  0%{
-    opacity: 0;
-    transform: translate(0,10px);
-  }
-  100%{
-    opacity: 1;
-    transform: translate(0);
-  }
-}
 .menu__container {
   background-color: $color-font;
   border-radius: 40px 40px 0 0;
@@ -59,19 +49,27 @@
       animation-delay: $timming-4;
     }
   }
+.menu__desc{
+  display: flex;
+  padding: 10px;
+  width: 100%;
+  overflow: hidden;
+}
   .menu{
-    width: 100%;
-    padding:10px;
-    margin-right: -65px;
+    display: flex;
+    flex-direction: column;
+    flex:1;
     transition: 1s;
+    flex:1;
+    overflow: hidden;
     &:hover{
       margin-right: 0;
     }
   }
-  .plat__desc {
+  .menu__prix{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: flex-end;
   }
 }
 @media screen and (min-width: $query){
@@ -97,5 +95,15 @@
         animation-delay: .2s;
       }
     }
+  }
+}
+@keyframes apparition{
+  0%{
+    opacity: 0;
+    transform: translate(0,10px);
+  }
+  100%{
+    opacity: 1;
+    transform: translate(0);
   }
 }
