--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,8 @@ h2,
 h3,
 h4,
 p,
-b {
+b,
+span {
   margin: 0;
   font-family: "Roboto", sans-serif;
 }
@@ -388,6 +389,7 @@ footer a {
   border-radius: 10px;
   height: 65px;
   overflow: hidden;
+  text-overflow: ellipsis;
   animation: apparition 0.6s 0.2s linear both;
 }
 .menu__container .menu__plat--1 {
@@ -407,6 +409,7 @@ footer a {
   padding: 10px;
   width: 100%;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 .menu__container .menu {
   display: flex;
@@ -415,6 +418,7 @@ footer a {
   transition: 1s;
   flex: 1;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 .menu__container .menu:hover {
   margin-right: 0;
