--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -20,6 +20,12 @@ h1 {
     font-size: 30px;
     max-width: 80%;
   }
+  h2 {
+    font-family: "Shrikhand", cursive;
+    font-weight: 400;
+    font-size: 30px;
+    max-width: 80%;
+  }
   h3 {
     display: flex;
     width: 40px;
@@ -30,7 +36,6 @@ h1 {
     border-bottom: 3px solid $color-tertiary;
   }
   h4 {
-    display: flex;
     font-size: 18px;
     max-width: 80%;
     white-space: nowrap;
