--- a/sass/components/_heart.scss
+++ b/sass/components/_heart.scss
@@ -7,19 +7,19 @@
   width: 30px;
   height: 30px;
 }
-  .test1 {
+  .heart--1 {
     fill:transparent;
     stroke: black;
     stroke-width: 2px;
     &:hover {
       cursor: pointer;
     }
-    &:hover + .test2{
+    &:hover + .heart--2{
     cursor: pointer;
     animation: remplir 1s linear both;
     }
   }
-  .test2 {
+  .heart--2 {
     fill: url(#lgrad);
     transform: scale(0);
     opacity: 0;
