--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -9,7 +9,7 @@
   background-color: #fff;
   z-index: 1;
   animation: 3s .1s disparition linear both;
-  h1{
+  span{
   font-family: 'Shrikhand', cursive;
   font-size: 40px;
   color: #000;
